erDiagram
  USERS ||--o{ CAMPAIGNS : "owner_user_id"
  USERS ||--o{ POLLS : "user_id"
  CAMPAIGNS ||--o{ POLLS : "poll_id"
  USERS ||--o{ EVENTS : "user_id"
  CAMPAIGNS ||--o{ EVENTS : "event_id"
  USERS ||--o{ FUNDRAISERS : "user_id"
  CAMPAIGNS ||--o{ FUNDRAISERS : "fundraiser_id"
  USERS ||--o{ CF_PROJECTS : "user_id"
  CAMPAIGNS ||--o{ CF_PROJECTS : "project_id"
  USERS ||--o{ SPONSOR_CALLS : "user_id"
  CAMPAIGNS ||--o{ SPONSOR_CALLS : "call_id"
  USERS ||--o{ CONTESTS : "user_id"
  CAMPAIGNS ||--o{ CONTESTS : "contest_id"
  USERS ||--o{ LOTTERIES : "user_id"
  EVENTS ||--o{ LOTTERIES : "event_id"
  CAMPAIGNS ||--o{ LOTTERIES : "lottery_id"
  CAMPAIGNS ||--o{ TRANSACTIONS : "campaign_id"
  USERS ||--o{ TRANSACTIONS : "user_id"
  CAMPAIGNS {
    uuid campaign_id PK
    campaign_type campaign_type
    uuid owner_user_id FK
  }
  POLLS {
    uuid poll_id PK
    uuid user_id FK
    string slug
    string title
    string display_organizer_name
    poll_status status
    vote_type vote_type
  }
  EVENTS {
    uuid event_id PK
    uuid user_id FK
    string slug
    string title
    event_status status
  }
  FUNDRAISERS {
    uuid fundraiser_id PK
    uuid user_id FK
    string slug
    string title
    decimal goal_amount
    decimal collected_amount
    fundraiser_status status
    decimal minimum_amount
  }
  CF_PROJECTS {
    uuid project_id PK
    uuid user_id FK
    string slug
    string title
    decimal goal_amount
    decimal raised_amount
    cf_status status
  }
  LOTTERIES {
    uuid lottery_id PK
    uuid user_id FK
    uuid event_id FK
    string slug
    string title
    lottery_status status
  }
  CONTESTS {
    uuid contest_id PK
    uuid user_id FK
    string slug
    string title
    contest_status status
    uuid escrow_id FK
  }
  SPONSOR_CALLS {
    uuid call_id PK
    uuid user_id FK
    string slug
    string title
    call_status status
  }
  TRANSACTIONS {
    uuid transaction_id PK
    uuid campaign_id FK
    campaign_type campaign_type
    tx_type type
    uuid visitor_id FK
    uuid user_id FK
    decimal gross_amount
    tx_status status
    uuid aggregator_id FK
    string external_tx_id
    string _more_columns_omitted
  }
  USERS {
    uuid user_id PK
    user_role role
    string full_name
    string email
    string phone_country_code
    user_status status
    uuid acquisition_source_id FK
    uuid linked_visitor_id FK
  }